--- a/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud03.xhtml
+++ b/tramites/src/main/webapp/app/tramites/area/acreditacion/solicitud03.xhtml
@@ -4,7 +4,8 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:p="http://primefaces.org/ui"
     xmlns:f="http://java.sun.com/jsf/core"
-    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml">
+    template="#{pageContext.servletContext.contextPath}/resources/template/plantilla.xhtml"
+    xmlns:jsf="http://xmlns.jcp.org/jsf">
 
     <ui:define name="titulo">
         <div class="header-content">
@@ -14,7 +15,7 @@
 
     <ui:define name="contenido">
         <div id="pricing">
-            <div class="ui-g ui-fluid">
+            <div jsf:id="divDatos" class="ui-g ui-fluid">
                 <p:outputPanel style="width: 100%" id="outTipoTramite">
                     <p:panelGrid columns="2" columnClasses="ui-g-12 ui-md-3 col3_left, ui-g-12 ui-md-9 col9_left"
                                  style="margin: 0 auto; width: 70%;"
@@ -67,25 +68,23 @@
                     </p:dataTable>
                     <br/><br/>
 
-                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud03View.guardar()}" onclick="PF('dlgEsperar').show();"
-                                     onsuccess="updateDlgMensaje();"/>
+                    <p:commandButton value="Guardar" style="width: 200px; margin: 0 auto;" action="#{solicitud03View.guardar()}" 
+                                     update="divDatos"/>
+                </p:outputPanel>
+
+                <p:outputPanel style="width: 100%" rendered="#{solicitud03View.showPanelDatos}">
+                    <h:panelGrid  columns="1" style="width: 100%; height: 100%;">
+                        <p:outputPanel>
+                            <i class="#{solicitud03View.iconDlgEspera}"></i>
+                            <br/><br/>
+                            <p:outputLabel value="#{solicitud03View.msjDlgEspera}" style="font-size: 16px;"/>
+                            <br/><br/>
+                            <p:button value="Aceptar" outcome="/index" style="width: 120px;" />
+                        </p:outputPanel>
+                    </h:panelGrid>
                 </p:outputPanel>
             </div>
         </div>
-
-        <p:remoteCommand name="updateDlgMensaje" update="pngDlg" action="#{solicitud02View.actualizarDlgEspera()}" />
-
-        <p:dialog modal="true" id="dlgEsperar" widgetVar="dlgEsperar" closable="false" draggable="false" 
-                  minimizable="false" resizable="false" height="150" width="500">
-            <h:panelGrid id="pngDlg" columnClasses="col2, col10" columns="2" style="width: 100%; height: 100%;">
-                <i class="#{solicitud02View.iconDlgEspera}"></i>
-                <p:outputPanel>
-                    <p:outputLabel value="#{solicitud02View.msjDlgEspera}" style="font-size: 16px;"/>
-                    <br/><br/>
-                    <p:commandButton value="Aceptar" action="#{solicitud02View.retornar}" rendered="#{solicitud02View.showBotonAceptar}" style="width: 120px;" />
-                </p:outputPanel>
-            </h:panelGrid>
-        </p:dialog>
 
         <h:outputStylesheet name="main.css" library="css" />
     </ui:define>
